# Hyppo

./: .gitignore  ISSUES.md  README.md  hpo-agent-engineering-plan.md  hpo_agent.py  orchestrator.py  prompt_builder.py  pyproject.toml  state.py
examples/cifar10/: modal_app.py
hyppo/: __init__.py  cli.py  config.py  llm_client.py  logger.py  metrics.py  orchestrator.py  project_context.py  prompt_builder.py  state.py
hyppo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hyppo/skills/: early_stopping.md  metrics_interpretation.md  search_strategy.md  tools.md
hyppo/tools/: definitions.py  modal_runner.py  search_space.py  wandb_reader.py
hyppo/training/: modal_app.py
my_campaign/skills/: search_strategy.md  tools.md
my_campaign/state/: active_runs.json  completed_runs.json  search_space.json  strategy.md
tests/: test_cli.py  test_mock_heartbeat.py  test_search_space.py  test_state.py
tools/: definitions.py  modal_runner.py  plotter.py  search_space.py  wandb_reader.py
workspace_template/skills/: early_stopping.md  metrics_interpretation.md
workspace_template/state/: config.json
