[project]
name = "hyppo"
version = "0.2.0"
description = "Autonomous hyperparameter optimization agent using LLMs, Modal, and W&B"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cli", "hyperparameter-optimization", "llm", "modal", "wandb"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "modal",
    "openai",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
publish = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Hrrsmjd/Hyppo"
Repository = "https://github.com/Hrrsmjd/Hyppo"

[project.scripts]
hyppo = "hyppo.cli:main"

[tool.setuptools.packages.find]
include = ["hyppo*"]

[tool.setuptools.package-data]
hyppo = ["skills/*.md"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
